feature backend database schema

--- a/k7_iot_board/board-back/src/main/resources/application.properties
+++ b/k7_iot_board/board-back/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=board-back
 server.port=8080
+
 # secret profile active
-spring.profiles.active=secret
+spring.profiles.active=secret, dev
+
+# === Database === #
+spring.datasource.url=jdbc:mysql://localhost:3306/board_v1
+
