--- a/k7_iot_board/board-back/src/main/resources/application.properties
+++ b/k7_iot_board/board-back/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=board-back
 server.port=8080
-
 # secret profile active
 spring.profiles.active=secret, dev
-
 # === Database === #
 spring.datasource.url=jdbc:mysql://localhost:3306/board_v1
-
+# === File Upload ===
+# Upload base directory
+file.upload.base-path=${user.dir}/upload
+# Profile upload
+file.upload.user-profile=user/profile
+#Board upload root
+file.upload.board=board
+#Multipart settings
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=100MB
