--- a/k7_iot_board/board-back/src/main/resources/application.properties
+++ b/k7_iot_board/board-back/src/main/resources/application.properties
@@ -1,16 +1,29 @@
+# === Application Info === #
 spring.application.name=board-back
 server.port=8080
-# secret profile active
-spring.profiles.active=secret, dev
+
+# === Active Profile === #
+spring.profiles.active=secret,dev
+
 # === Database === #
 spring.datasource.url=jdbc:mysql://localhost:3306/board_v1
-# === File Upload ===
+
+# === File Upload === #
 # Upload base directory
 file.upload.base-path=${user.dir}/upload
+
 # Profile upload
 file.upload.user-profile=user/profile
-#Board upload root
+
+# Board upload root
 file.upload.board=board
-#Multipart settings
+
+# Multipart settings
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=100MB
+
+jwt.expiration=600000
+jwt.refresh-expiration=604800000
+jwt.email-expiration=180000
+jwt.clock-skew-seconds=60
