use query mutation

--- a/k7_iot_board/board-back/.gitignore
+++ b/k7_iot_board/board-back/.gitignore
@@ -36,6 +36,10 @@ out/
 ### VS Code ###
 .vscode/
 
-### secret properies ###
+### secret properties ###
+application.properties
+application-dev.properties
 application-secret.properties
+**/application.properties
+**/application-dev.properties
 **/application-secret.properties
