--- a/k7_iot_board/board-back/build.gradle
+++ b/k7_iot_board/board-back/build.gradle
@@ -19,14 +19,14 @@ repositories {
 }
 
 dependencies {
-    // Spring Web & JPA & Validation & Security & Email
+    // Spring Web & JPA & Validation & Security & Email & OAuth2
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j'
     // H2 Database
     runtimeOnly 'com.h2database:h2'
+
+    // Instant 직렬화
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
