--- a/k_iot_spring/demo_ssr_v1/src/main/resources/application-local.yml
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/application-local.yml
@@ -16,25 +16,25 @@ logging:
 
 spring:
   # Mustache 템플릿 엔진 설정
-  #  mustache:
-  #    servlet:
-  # 세션과 요청 속성을 템플릿에서 사용 가능하게 함
-  #      expose-session-attributes: true
-  #      expose-request-attributes: true
+#  mustache:
+#    servlet:
+      # 세션과 요청 속성을 템플릿에서 사용 가능하게 함
+#      expose-session-attributes: true
+#      expose-request-attributes: true
   servlet:
     multipart:
-      enabled: true           # 파일 업로드 활성화
-      max-file-size: 10MB     # 개별 파일 최대 크기
-      max-request-size: 10MB  # 전체 파일 최대 크기
+      enabled: true                 # 파일 업로드 활성화
+      max-file-size: 10MB           # 개별 파일 최대 크기
+      max-request-size: 10MB        # 전체 요청 최대크기
+
 
   # 데이터베이스 연결 설정 (H2 인메모리 데이터베이스)
   datasource:
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     # MODE=MySQL: H2를 MySQL 호환 모드로 실행
-    url: jdbc:h2:mem:test;MODE=MySQL
-    username: sa
-    password:
-
+    url: jdbc:mysql://localhost:3306/myblog?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: root
 
   # H2 데이터베이스 웹 콘솔 활성화 (개발용)
   # localhost:8080/h2-console로 접속 가능
@@ -63,14 +63,14 @@ spring:
       hibernate:
         # SQL 쿼리를 보기 좋게 포맷팅
         format_sql: true
-        # N + 1 문제 해결: LAZY 로딩 시 연관된 엔티티를 배치로 한 번에 가져오기
-        # 게시글 목록 조회 시 만약(username이 필요하다면)
-        # 배치로 묶어서 한 번에 가져옴 (IN 쿼리 사용)
+        # N+ 1 문제 해셜: LAZY 로딩 시 연관된 엔티티를 배치로 한 번에 가져오기
+        # 게시글 목록 조소히 시 만약 (username 필요하다면)
+        # 배치로 묶어서 한 번에 가져옴
         default_batch_fetch_size: 100
     # data.sql 파일을 Hibernate 초기화 이후에 실행
     defer-datasource-initialization: true
-    # Open Session in View 를 false 로 설정
-    # - true (기본값) 뷰 렌터링 까지 세션 유지 (LAZY 로딩 가능)
-    # - false : 트랜잭션 종료 시 세션 종료(LAZY 로딩 불가, 명시적 조회 필요(트리거))
-    # - false 설정 시 Service 에서 필요한 데이터를 모두 조회 하고 DTOfh 변환해야 함
+    # Open Session in View 를 false로 설정
+    # - true(기본값) 뷰 렌더링 까지 세션 유지 (LAZY 로딩 가능)
+    # - false : 트랜젝션 종류 시 세션 종류 (LAZY 로딩 불가, 명시적 조회 필요(트리거))
+    # - false 설정 시 Service 에서 필요한 데이터를 모두 조회 하고 DTO로 변환 해야함
     open-in-view: false
