--- a/k_iot_spring/demo_ssr_v1/src/main/resources/application-dev.yml
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/application-dev.yml
@@ -29,12 +29,11 @@ spring:
 
   # 데이터베이스 연결 설정 (H2 인메모리 데이터베이스)
   datasource:
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     # MODE=MySQL: H2를 MySQL 호환 모드로 실행
-    url: jdbc:h2:mem:test;MODE=MySQL
-    username: sa
-    password:
-
+    url: jdbc:mysql://localhost:3306/myblog?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: root
 
   # H2 데이터베이스 웹 콘솔 활성화 (개발용)
   # localhost:8080/h2-console로 접속 가능
@@ -74,3 +73,10 @@ spring:
     # - false : 트랜잭션 종료 시 세션 종료(LAZY 로딩 불가, 명시적 조회 필요(트리거))
     # - false 설정 시 Service 에서 필요한 데이터를 모두 조회 하고 DTOfh 변환해야 함
     open-in-view: false
+
+oauth:
+  kakao:
+    client-id: ${KAKAO_CLIENT_ID}
+
+tenco:
+  key: ${TENCO_KEY}
