--- a/k_iot_spring/demo_ssr_v1/src/main/resources/application-dev.yml
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/application-dev.yml
@@ -31,7 +31,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # MODE=MySQL: H2를 MySQL 호환 모드로 실행
-    url: jdbc:mysql://localhost:3306/myblog?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/myblog?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
     username: root
     password: root
 
@@ -47,15 +47,15 @@ spring:
       # 2.5 이상 버전부터 명시를 해야 insert 처리 됨
       mode: always
       # 애플리케이션 시작시 실행할 SQL 파일 위치
-      data-locations:
-        - classpath:db/data.sql
+#      data-locations:
+#        - classpath:db/data.sql
 
   # JPA 설정
   jpa:
     hibernate:
       # create: 애플리케이션 시작시 테이블을 새로 생성
       # 기존 데이터는 모두 삭제됨 (개발용)
-      ddl-auto: create
+      ddl-auto: update
     # SQL 쿼리를 콘솔에 출력 (개발용 디버깅)
     show-sql: true
     properties:
@@ -73,10 +73,32 @@ spring:
     # - false : 트랜잭션 종료 시 세션 종료(LAZY 로딩 불가, 명시적 조회 필요(트리거))
     # - false 설정 시 Service 에서 필요한 데이터를 모두 조회 하고 DTOfh 변환해야 함
     open-in-view: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${GOOGLE_APP_USERNAME}
+    password: ${GOOGLE_APP_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          # SMTP의 서버 인증 활성화
+          auth: true
+          # START TLS (보안 연결)
+          starttls:
+            # 비 암호화 연결을 암호화 연결(TLS)로 승격 활성하
+            enable: true
+            required: true
+          # 타임아웃 설정 - 서버간 통긴 시준
+          # 소켓 연결 제한 시간(단위 밀리초)
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
 
 oauth:
   kakao:
     client-id: ${KAKAO_CLIENT_ID}
+    client-secret: ${KAKAO_CLIENT_SECRET}
+
 
 tenco:
   key: ${TENCO_KEY}
