--- a/k_iot_spring/demo_ssr_v1/src/main/resources/application-local.yml
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/application-local.yml
@@ -79,6 +79,8 @@ spring:
 oauth:
   kakao:
     client-id: ${KAKAO_CLIENT_ID}
+    client-secret: ${KAKAO_CLIENT_SECRET}
+
 
 tenco:
   key: ${TENCO_KEY}
