--- a/k_iot_spring/demo_ssr_v1/src/main/resources/application-dev.yml
+++ b/k_iot_spring/demo_ssr_v1/src/main/resources/application-dev.yml
@@ -45,7 +45,7 @@ spring:
   sql:
     init:
       # 2.5 이상 버전부터 명시를 해야 insert 처리 됨
-      mode: always
+      mode: never
       # 애플리케이션 시작시 실행할 SQL 파일 위치
 #      data-locations:
 #        - classpath:db/data.sql
